sheep-dog-specs/docker/overlays/snapshot/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: sheep-dog-dev-svc
spec:
  ports:
    - name: sheep-dog-dev-svc
      port: 8080
      nodePort: 30082
---
apiVersion: v1
kind: Service
metadata:
  name: sheep-dog-dev-db
spec:
  ports:
    - name: sheep-dog-dev-db
      port: 3306
      nodePort: 30326
