sheep-dog-specs/docker/overlays/snapshot/ingress-patch.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: sheep-dog-dev-ingress
spec:
  rules:
    - host: qa.sheepdogdev.io
